--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@
    RewriteEngine On
 
    RewriteCond %{REQUEST_FILENAME} !-f [OR]
-   RewriteCond %{REQUEST_FILENAME} !-f
+   RewriteCond %{REQUEST_FILENAME} !-d
    RewriteRule ^(.*)$ index.php [L,QSA]
 
 </IfModule>
