--- a/.htaccess
+++ b/.htaccess
@@ -4,8 +4,7 @@
 
    RewriteEngine On
 
-   RewriteCond %{REQUEST_FILENAME} !-f [OR]
-   RewriteCond %{REQUEST_FILENAME} !-d
+   RewriteCond %{REQUEST_FILENAME} !-f
    RewriteRule ^(.*)$ index.php [L,QSA]
 
 </IfModule>
